Changes made to Meet Up page

--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -33,9 +33,12 @@
 }
 
 
-.header a:active,
 .header a:visited{
     color: white;
+}
+
+.header a:active{
+    font-size: 2rem;
 }
 
 .header a:hover{
